classDiagram
class AnnoScolastico {
	annoScolasticoId: INTEGER
	testo: TEXT
	inizio: TEXT
	fine: TEXT
}

class Classe {
	classeId: INTEGER
	annoScolasticoId: INTEGER
	anno: INTEGER
	sezione: TEXT
	indirizzo: TEXT
	articolazione: TEXT
	maxGiustificazioni: INTEGER
}

class Studente {
	studenteId: INTEGER
	nome: TEXT
	cognome: TEXT
}

class Registro {
	studenteId: INTEGER
	classeId: INTEGER
}

class Argomento {
	argomentoId: INTEGER
	argomento: TEXT
}

class Programmazione {
	classeId: INTEGER
	argomentoId: INTEGER
}

class Quesito {
	quesitoId: INTEGER
	argomentoId: INTEGER
	quesito: TEXT
}

class Assenza {
	studenteId: INTEGER
	data: TEXT
}

class Giustificazione {
	studenteId: INTEGER
	data: TEXT
	immotivata: INTEGER
}

class Interrogazione {
	interrogazioneId: INTEGER
	studenteId: INTEGER
	argomentoId: INTEGER
	data: TEXT
	voto: REAL
	descrizione: TEXT
}

class Indicatore {
	indicatoreId: INTEGER
	indicatore: TEXT
	descrizione: TEXT
	peso: REAL
}

class Descrittore {
	descrittoreId: INTEGER
	indicatoreId: INTEGER
	descrittore: TEXT
	descrizione: TEXT
	livello: INTEGER
}

class Verbale {
	interrogazioneId: INTEGER
	quesitoId: INTEGER
}

class Valutazione {
	interrogazioneId: INTEGER
	descrittoreId: INTEGER
}

Classe "*" -- "1" AnnoScolastico : annoScolasticoId
Registro "*" -- "1" Classe : classeId
Registro "*" -- "1" Studente : studenteId
Programmazione "*" -- "1" Argomento : argomentoId
Programmazione "*" -- "1" Classe : classeId
Quesito "*" -- "1" Argomento : argomentoId
Assenza "*" -- "1" Studente : studenteId
Giustificazione "*" -- "1" Studente : studenteId
Interrogazione "*" -- "1" Argomento : argomentoId
Interrogazione "*" -- "1" Studente : studenteId
Descrittore "*" -- "1" Indicatore : indicatoreId
Verbale "*" -- "1" Quesito : quesitoId
Verbale "*" -- "1" Interrogazione : interrogazioneId
Valutazione "*" -- "1" Descrittore : descrittoreId
Valutazione "*" -- "1" Interrogazione : interrogazioneId

